update to java 11; added basic immutability