@@ -2,6 +2,7 @@ package com.basics.demo;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StreamAPI {
     public static void main(String[] args) {
@@ -9,16 +10,16 @@ public class StreamAPI {
         System.out.println("Original list: " + names);
 
         System.out.println("Filtered (starts with 'J'): " +
-                names.stream().filter(name -> name.startsWith("J")).toList());
+                names.stream().filter(name -> name.startsWith("J")).collect(Collectors.toList()));
 
         System.out.println("Mapped to uppercase: " +
-                names.stream().map(String::toUpperCase).toList());
+                names.stream().map(String::toUpperCase).collect(Collectors.toList()));
 
         System.out.println("Sorted: " +
-                names.stream().sorted().toList());
+                names.stream().sorted().collect(Collectors.toList()));
 
         System.out.println("Distinct: " +
-                names.stream().distinct().toList());
+                names.stream().distinct().collect(Collectors.toList()));
 
         System.out.println("First element starting with 'A': " +
                 names.stream().filter(name -> name.startsWith("A")).findFirst().orElse("None"));
@@ -30,7 +31,7 @@ public class StreamAPI {
                 names.stream().reduce("", (a, b) -> a + (a.isEmpty() ? "" : ", ") + b));
 
         System.out.println("Parallel Stream (unordered): " +
-                names.parallelStream().toList());
+                names.parallelStream().collect(Collectors.toList()));
 
         System.out.println("Any match for 'Bob': " +
                 names.stream().anyMatch(name -> name.equals("Bob")));
